--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -13,6 +13,11 @@ services:
       - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U fortnite"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
     networks:
       - app-network
 
@@ -25,9 +30,11 @@ services:
       JWT_SECRET: "supersegredo123"
       PORT: 4000
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - "4000:4000"
+    restart: always
     networks:
       - app-network
 
