--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,5 @@
-# Etapa 1: build da aplicação
+# Etapa 1: build
 FROM node:20 AS build
-
 WORKDIR /app
 
 COPY package*.json ./
@@ -8,22 +7,25 @@ RUN npm install
 
 COPY . .
 
-# Gera o Prisma Client dentro da imagem (no Linux)
 RUN npx prisma generate
-
 RUN npm run build
 
+# Copia o JSON para dist/data após o build (garantido)
+RUN mkdir -p dist/data && cp src/data/sample-cosmetics.json dist/data/sample-cosmetics.json
 
-# Etapa 2: runtime (mais leve)
-FROM node:20
 
+# Etapa 2: runtime
+FROM node:20 AS production
 WORKDIR /app
 
-COPY --from=build /app ./
+COPY --from=build /app/dist ./dist
+COPY --from=build /app/node_modules ./node_modules
+COPY --from=build /app/prisma ./prisma
+# ✅ Copia o arquivo diretamente da etapa build
+COPY --from=build /app/dist/data/sample-cosmetics.json ./dist/data/sample-cosmetics.json
 
 ENV NODE_ENV=production
 ENV PORT=4000
 
 EXPOSE 4000
-
 CMD ["node", "dist/main.js"]
