--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -29,14 +29,23 @@ services:
       DATABASE_URL: "postgresql://fortnite:fortnite@db:5432/fortnite?schema=public"
       JWT_SECRET: "supersegredo123"
       PORT: 4000
+      FORTNITE_API_BASE: "https://fortnite-api.com/v2"
     depends_on:
       db:
         condition: service_healthy
+    command: >
+      sh -c "
+        npx prisma generate &&
+        npx prisma db push &&
+        node dist/main.js
+      "
     ports:
       - "4000:4000"
     restart: always
     networks:
       - app-network
+
+
 
 volumes:
   db-data:
