feat: cron diário de sincronização + ajustes finais

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       POSTGRES_DB: fortnite
       POSTGRES_USER: fortnite
       POSTGRES_PASSWORD: fortnite
+      TZ: America/Sao_Paulo
     ports:
       - "5432:5432"
     volumes:
@@ -29,7 +30,9 @@ services:
       DATABASE_URL: "postgresql://fortnite:fortnite@db:5432/fortnite?schema=public"
       JWT_SECRET: "supersegredo123"
       PORT: 4000
+      TZ: America/Sao_Paulo
       FORTNITE_API_BASE: "https://fortnite-api.com/v2"
+      SYNC_CRON_EXPR: "0 3 * * *"
     depends_on:
       db:
         condition: service_healthy
@@ -44,8 +47,6 @@ services:
     restart: always
     networks:
       - app-network
-
-
 
 volumes:
   db-data:
