--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "buildCommand": "cd backend && npm install && npm run build && npx prisma generate",
   "builds": [
     {
       "src": "backend/src/main.ts",
@@ -11,8 +12,5 @@
       "src": "/(.*)",
       "dest": "backend/src/main.ts"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
