--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,16 @@
 {
   "version": 2,
+  "buildCommand": "cd backend && npm install && npx prisma generate && npm run build",
   "builds": [
     {
-      "src": "src/main.ts",
+      "src": "backend/src/main.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/main.ts"
+      "dest": "backend/src/main.ts"
     }
   ]
 }
